fixed ui jumping on navigation because of scrollbar.

--- a/webshoppractice.client/src/assets/main.css
+++ b/webshoppractice.client/src/assets/main.css
@@ -6,6 +6,7 @@ html, body, #app {
   width: 100%;
   margin: 0 auto;
   font-weight: normal;
+  scrollbar-gutter: stable;
 }
 
 a,
